<resources>
    <string name="app_name">Storyboard</string>

    <!-- Strings for startup screen -->
    <string name="welcome_string">Welcome to Storyboard!</string>

    <!-- User credentials (login/signup) -->
    <string name="signup_string">Sign Up</string>
    <string name="name_header">Full Name</string>
    <string name="name_string">Enter Name</string>
    <string name="password_string">Password</string>
    <string name="confirm_password_string">Confirm Password</string>
    <string name="email_string">Enter Email</string>
    <string name="email_singular">Email</string>
    <string name="username_string">Username</string>
    <string name="login_string">Login</string>
    <string name="enter_username_hint">Enter username</string>
    <string name="enter_email_hint">Enter email</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="forgot_password_string">Forgot password?</string>
    <string name="reset_password_string">Reset Password</string>

    <!-- String for the sidebar -->
    <string name="profile_string">Profile</string>
    <string name="explore_string">Explore</string>
    <string name="messages_string">Messages</string>
    <string name="setting_string">Settings</string>
    <string name="logout_string">Logout</string>
    <string name="search_string">Search</string>
    <string name="notifications_string">Notifications</string>

    <!-- String for a writers project,  -->
    <string name="title_string">Title</string>
    <string name="description_string">Description</string>
    <string name="theme_string">Theme</string>
    <string name="plot_string">Plot</string>
    <string name="characters_string">Characters</string>
    <string name="elements_string">Elements</string>
    <string name="new_proj_string">New</string>
    <string name="freewrite_string">Freewrite</string>
    <string name="freewrite_draft_title">New Freewrite Draft</string>
    <string name="freewrite_draft_placeholder">Start your drafting here...</string>
    <string name="prompt_string">Prompt</string>
    <string name="prompt_draft_title">New Prompt Draft</string>
    <string name="public_string">Public</string>
    <string name="private_string">Private</string>

    <!-- String for feedback -->
    <string name="feedback_string">Feedback</string>
    <string name="writer_feedback_string">Writer Feedback</string>

    <!-- String for weekly challenges -->
    <string name="weekly_challenges_string">Weekly Challenges</string>
    <string name="challengeOne_string">Challenge One</string>
    <string name="challengeTwo_string">Challenge Two</string>
    <string name="challengeThree_string">Challenge Three</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="invalid_login_credentials">Invalid username or password</string>
    <string name="invalid_email">Invalid email</string>
    <string name="error_missing_field">All fields must be filled</string>
    <string name="error_password_mismatch">Passwords do not match</string>
    <string name="error_password_too_short">Must be at least 6 characters long</string>
    <string name="registration_complete">Registration complete, please verify email</string>
    <string name="error_email_in_use">Email already in use</string>
    <string name="error_during_registering">Error during registering</string>

    <!-- Strings related to resetting password -->
    <string name="email_sent">Email sent</string>
    <string name="email_does_not_exist">Email does not exist</string>
    <string name="error">Error</string>
    <string name="account_disabled">Account disabled</string>
    <string name="email_required">Email is required</string>
    <string name="email_not_valid">Not a valid email</string>
    <string name="title_activity_free_write">FreeWriteActivity</string>
    <string name="title_activity_prompt">PromptActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <!-- Weekly Stuff -->
    <string name="weekly_challenge_header"><u><b>Weekly Challenge</b></u></string>
    <string name="title_activity_side_menu">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
