<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/confirmPasswordInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="202dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/confirm_password_string"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordHeading" />

    <EditText
        android:id="@+id/fullNameInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/name_string"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/emailHeading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullNameHeading" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="19dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/email_string"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/passwordHeading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailHeading" />

    <Button
        android:id="@+id/signupSubmit"
        android:layout_width="163dp"
        android:layout_height="50dp"
        android:layout_marginBottom="116dp"
        android:text="@string/signup_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fullNameHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="398dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/name_header"
        app:layout_constraintBottom_toTopOf="@+id/loginSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_string"
        app:layout_constraintBottom_toTopOf="@+id/emailInput"
        app:layout_constraintStart_toStartOf="@+id/emailInput"
        app:layout_constraintTop_toBottomOf="@+id/fullNameInput" />

    <TextView
        android:id="@+id/passwordHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_string"
        app:layout_constraintBottom_toTopOf="@+id/passwordInput"
        app:layout_constraintStart_toStartOf="@+id/passwordInput"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <TextView
        android:id="@+id/confirmPasswordHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password_string"
        app:layout_constraintBottom_toTopOf="@+id/confirmPasswordInput"
        app:layout_constraintStart_toStartOf="@+id/confirmPasswordInput"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/enter_password_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/confirmPasswordHeading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordHeading" />

    <Button
        android:id="@+id/loginSubmit"
        android:layout_width="342dp"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/login_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullNameHeading" />
</android.support.constraint.ConstraintLayout>