<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartupActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/signupButton"
        android:layout_width="163dp"
        android:layout_height="50dp"
        android:layout_marginBottom="116dp"
        android:text="@string/signup_string"
        android:onClick="signupAction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/loginButton"
        android:layout_width="163dp"
        android:layout_height="50dp"
        android:layout_marginBottom="116dp"
        android:text="@string/login_string"
        android:onClick="loginAction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username_hint"
        android:inputType="text"
        android:paddingBottom="12dp"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password_hint"
        android:inputType="text"
        android:paddingBottom="12dp"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />


</android.support.constraint.ConstraintLayout>