<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="50dp">

    <Button
        android:id="@+id/signupSubmit"
        android:layout_width="175dp"
        android:layout_height="0dp"
        android:onClick="signupButtonPressed"
        android:layout_marginBottom="159dp"
        android:text="@string/signup_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginSubmit" />

    <TextView
        android:id="@+id/welcomeHeading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="106dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="77dp"
        android:text="@string/welcome_string"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/loginSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginSubmit"
        android:layout_width="175dp"
        android:layout_height="0dp"
        android:onClick="loginPressed"
        android:layout_marginBottom="47dp"
        android:text="@string/login_string"
        app:layout_constraintBottom_toTopOf="@+id/signupSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeHeading" />

</android.support.constraint.ConstraintLayout>